---------------------------------------------------------------------------------------------------
Version: 0.6.100
Date: 2024-12-01
  The i finally figured out a use for astatine! Update:

  Additions:
    - Added Astatine.
    - Added a Kovarex-like recipe for polonium.
    - Added milestones compatability!

  Changes:
    - Changed shield equipment to take 30 argon gas instead of 15.

---------------------------------------------------------------------------------------------------
Version: 0.6.006
Date: 2024-12-01
  The im gonna squeak through to the loonybin Update:

  Fixes:
    - Fixed Squeakthrough 2 having an issue with PM.
    - Fixed Intermodal Containers having an issue with PM.
    - Fixed the item version of gunpowder not being in the right subgroup.
    - Fixed the locale of hydrogen peroxide.
    - Fixed TWAT's not having a subgroup.
---------------------------------------------------------------------------------------------------
Version: 0.6.005
Date: 2024-12-01
  The it could be better, it could be worse Update:

  Additions:
    - New Ezekiel and TM leeching icons.

  Changes:
    - Reverted to the 1.0 system of TM and Ezekiel leeching technologies.
    - Moved explosives into their own subgroup.
    - Changed express splitters to take 4 processing units instead of 6.

  Fixes:
    - Fixed gunpowder recipe not being in a subgroup.
    - Fixed hydrogen peroxide not being in a subgroup.

---------------------------------------------------------------------------------------------------
Version: 0.6.004
Date: 2024-11-30
  The new content guys! jangle jangle! Update:

  Additions:
    - Added an early game way to grow wood. Not using pills.
    - Actually added the yttrium plastic pellet recipe. whoops! it'll be moved into its own technology.. soon...

  Changes:
    - Moved the saw into the intermediates tab.
  Fixes:
    - ACTUTALLY fixed dirty boilers fluid boxes being fucked.
    - Added locales for chunk plate recipes.